[package]
name = "phoenix-runtime"
version = "0.5.1"
authors = ["Cycan Technologies"]
edition = "2018"
homepage = "https://cycan.network/"
repository = "https://github.com/CycanTech/Cycan/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

frame-executive = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
frame-support = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
frame-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false, package = "frame-system" }
frame-system-rpc-runtime-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }

pallet-evm = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-ethereum = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-dynamic-fee = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
fp-rpc = { default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }

pallet-babe = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-consensus-babe = { git = "https://github.com/CycanTech/substrate",branch = "v3.0.1", default-features = false }

pallet-balances = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-grandpa = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-sudo = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }

sp-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-block-builder = {git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-inherents = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false}
sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-offchain = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-session = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
sp-std = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-version = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }


pallet-contracts = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
pallet-contracts-primitives = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
log = { version = "0.4.14", default-features = false }
pallet-evm-precompile-call-vm = {default-features = false, version = '0.1.0', path = "../../frame/evm/precompile/call-vm" }
pallet-vm-bridge = {default-features = false, version = '0.1.0', path = "../../frame/vm-bridge" }

pallet-session = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",features = ["historical"], default-features = false }
pallet-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false }
pallet-staking-reward-curve = {  git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false}
sp-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",default-features = false }

# benchmarking dependencies
frame-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false,  optional = true }
pallet-rgrandpa = { default-features = false, path = '../../frame/rgrandpa', version = '0.1.0' }
pallet-im-online = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-utility = { default-features = false, git = "https://github.com/CycanTech/substrate",branch = "v3.0.1"}
pallet-offences = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",  default-features = false, optional = true }
pallet-authorship = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-indices = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-tips = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-treasury = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-bounties = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }

pallet-membership = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-democracy = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-collective = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-scheduler = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-authority-discovery = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
pallet-authority-discovery = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false}
pallet-multisig = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }

pallet-esbind = { default-features = false, path = '../../frame/esbind', version = '0.1.0' }
#pallet-upgrade-test= { default-features = false, path = '../../frame/upgrade-test', version = '2.0.0' }
[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }

[features]
default = ["std", "babe"]
babe = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",
	'pallet-contracts/std',
	'pallet-contracts-primitives/std',
	'pallet-contracts-rpc-runtime-api/std',
	'pallet-vm-bridge/std',
	'pallet-evm-precompile-call-vm/std',
	'pallet-session/std',
	'pallet-staking/std',
	'sp-staking/std',
	'pallet-rgrandpa/std',
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-authorship/std",
	"pallet-indices/std",
	"pallet-bounties/std",
	"pallet-treasury/std",
	"pallet-tips/std",
	"pallet-membership/std",
	"pallet-elections-phragmen/std",
	"pallet-democracy/std",
	"pallet-collective/std",
	"pallet-scheduler/std",
	"pallet-utility/std",
	"pallet-authority-discovery/std",
	"sp-authority-discovery/std",
	"pallet-multisig/std",
	"pallet-esbind/std",
#	"pallet-upgrade-test/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	'pallet-rgrandpa/runtime-benchmarks',
	"pallet-offences-benchmarking",
	'pallet-collective/runtime-benchmarks',
	'pallet-esbind/runtime-benchmarks',
]
