[package]
name = "pallet-evm-precompile-call-vm"
version = "0.1.0"
edition = "2018"
description = "CallWasmC precompiles for EVM pallet."

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-evm = {version = "5.0.0", default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3"}
fp-evm = {version = "2.0.0", default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3" }

evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
pallet-vm-bridge = { version = "0.1.0", path = "../../../vm-bridge", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
	"pallet-vm-bridge/std",
]