[package]
name = "pallet-evm-precompile-call-vm"
version = "0.1.0"
edition = "2018"
description = "CallWasmC precompiles for EVM pallet."

[dependencies]
sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-std = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
frame-support = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
frame-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-evm = { default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3.0.1"}
fp-evm = { default-features = false,git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }

evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
pallet-vm-bridge = { version = "0.1.0", path = "../../../vm-bridge", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
	"pallet-vm-bridge/std",
]